hard-gists/2310005/run.log
=== Docker Run Log for 2310005 ===
Started at: Mi 29. Okt 13:02:14 CET 2025

[2025-10-29 13:02:15] START: Running container for 2310005
[2025-10-29 13:02:15] SUCCESS: Container 8320d71dae001cc0ad01997a42bc792089fe68bd7d92b9a3aa2ad435045166f8 started for 2310005
=== Container logs for 2310005 ===
  File "/snippet.py", line 32
    print 'EMU PROFILE OUTPUT:'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2310005 ===
[2025-10-29 13:02:17] INFO: Container 8320d71dae001cc0ad01997a42bc792089fe68bd7d92b9a3aa2ad435045166f8 has stopped
